# golden_dataset_gen

./: .env.example  .gitignore  ExampleQueries.py  README.md  generated_dataset.csv  main.py  output.csv  pyproject.toml  pytest.ini  requirements.txt  run_tests.sh
analyzer/: text_analyzer.py
config/: __init__.py  component_factory.py  logging_config.py  variable_config.py
docs/: PRE_COMMIT_CHECKLIST.md  PROJECT_STRUCTURE.md  SETUP.md
generated_datasets/: business_dataset.csv  general_dataset.csv  query_results.csv  scientific_dataset.csv  technology_dataset.csv
goldendataset/: ds_generator.py
knowledgegraph/: builder.py
querygenerator/: generator.py
rag_evaluator/: enhanced_generator.py
tests/: README.md  __init__.py  conftest.py  test_answer_generator.py  test_integration.py  test_knowledge_graph.py  test_query_analyzer.py  test_query_generator.py
